samples/_failures_safe/1761083337_061ef4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32d423a2.c: In function ‘main’:
./samples/SAFE/__tmp_32d423a2.c:133:5: error: expected declaration or statement at end of input
  133 |     char message[256];
      |     ^~~~
